@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2024  Hybird
+#    Copyright (C) 2015-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -50,7 +50,7 @@ class SMSConfig(CremeAppConfig):
         from . import bricks
 
         brick_registry.register(
-            bricks.MessagingListsBlock,
+            bricks.MessagingListsBrick,
             bricks.RecipientsBrick,
             bricks.ContactsBrick,
             # bricks.MessagesBrick,  # reference (detail/reloading views) are hard coded
